--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -7,37 +7,65 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
+    env:
+      IMAGE_NAME: ${{ secrets.USER }}/mywebhookserver
+    
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
-
+      
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
-
+      
       - name: Grant execute permission for Gradle
         run: chmod +x gradlew
-
+      
       - name: Create application-secret.properties
         run: |
           echo "${{ secrets.PROPERTIES }}" > src/main/resources/application-secret.properties
-
+      
       - name: Build with Gradle
         run: ./gradlew clean build
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+      
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build & Push Docker image
+      
+      - name: Build & Push Docker image with tag
         run: |
-          docker build -t syjoy1993/mywebhookserver:latest .
-          docker push syjoy1993/mywebhookserver:latest
+          IMAGE_TAG=${GITHUB_SHA::7}
+          echo "IMAGE_TAG=$IMAGE_TAG"
+          docker build -t $IMAGE_NAME:$IMAGE_TAG .
+          docker push $IMAGE_NAME:$IMAGE_TAG
+      
+      - name: Checkout manifests repo
+        uses: actions/checkout@v3
+        with:
+          repository: syjoy1993/MyWebhookServerMF
+          token: ${{ secrets.MANIFESTS_REPO_TOKEN }}
+          path: manifests
+      
+      - name: Update image tag in deployment.yaml
+        run: |
+          IMAGE_TAG=${GITHUB_SHA::7}
+          yq eval ".spec.template.spec.containers[0].image = \"$IMAGE_NAME:$IMAGE_TAG\"" -i manifests/manifests/deployment.yaml
+      
+      - name: Commit & Push updated manifests
+        run: |
+          cd manifests
+          git config user.name "saya-ci"
+          git config user.email "saya@github-actions.com"
+          git add manifests/deployment.yaml
+          git diff --cached --quiet && echo "🔸 No changes to commit" || (
+            git commit -m "chore: update image tag to $IMAGE_TAG"
+            git push origin main
+          )
